# Setheum

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  HEADER-APACHE-2.0  HEADER-GPL3  HEADER-MIT  LICENSE  LICENSE.md  Makefile  README.md  TODO.md  docker-compose.yml  types.json
blockchain/finalizer/: Cargo.toml  README.md
blockchain/finalizer/src/: commands.rs  main.rs
blockchain/primitives/: Cargo.toml
blockchain/primitives/src/: aleph.rs  currency.rs  evm.rs  lib.rs  nft.rs  signature.rs  task.rs  testing.rs  tests.rs  unchecked_extrinsic.rs
blockchain/primitives/src/bonding/: controller.rs  error.rs  ledger.rs  mod.rs
inspect/: Cargo.toml
inspect/src/: cli.rs  command.rs  lib.rs
interfaces/setheum-client/: .dockerignore  Cargo.toml  README.md  TODO.md  rust-toolchain.toml
interfaces/setheum-client/docker/: README.md  subxt-integration-entrypoint.sh  subxt-integration.Dockerfile
interfaces/setheum-client/src/: connections.rs  lib.rs  runtime_types.rs  setheum.rs  utility.rs  waiting.rs
interfaces/setheum-client/src/contract/: convertible_value.rs  event.rs  mod.rs
interfaces/setheum-client/src/pallets/: aleph.rs  author.rs  balances.rs  committee_management.rs  (+15 more)
lib-serml/airdrop/: Cargo.toml
lib-serml/airdrop/src/: lib.rs  mock.rs  tests.rs
lib-serml/al-ethaar-quadratic-altruism/: Cargo.toml
lib-serml/atomic-swap/: Cargo.toml  README.md
lib-serml/atomic-swap/src/: lib.rs  tests.rs
lib-serml/auction-manager/: Cargo.toml
lib-serml/auction-manager/src/: lib.rs  mock.rs  tests.rs  weights.rs
lib-serml/balances/: Cargo.toml
lib-serml/balances/src/: lib.rs
lib-serml/cdp-engine/: Cargo.toml
lib-serml/cdp-engine/src/: debit_exchange_rate_convertor.rs  lib.rs  mock.rs  tests.rs  weights.rs
lib-serml/cdp-treasury/: Cargo.toml
lib-serml/cdp-treasury/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
lib-serml/channel-follows/: Cargo.toml
lib-serml/channel-follows/rpc/: Cargo.toml
lib-serml/channel-follows/src/: lib.rs  rpc.rs
lib-serml/channel-history/: Cargo.toml  types.json
lib-serml/channel-history/src/: lib.rs
lib-serml/channel-ownership/: Cargo.toml
lib-serml/channel-ownership/src/: lib.rs
lib-serml/channels/: Cargo.toml  types.json
lib-serml/channels/rpc/: Cargo.toml
lib-serml/channels/src/: lib.rs  rpc.rs
lib-serml/currencies/: Cargo.toml
lib-serml/currencies/src/: lib.rs  mock.rs  tests.rs  weights.rs
lib-serml/democracy/: Cargo.toml  README.md
lib-serml/democracy/src/: benchmarking.rs  conviction.rs  lib.rs  tests.rs  types.rs  vote.rs  vote_threshold.rs  weights.rs
lib-serml/dex/: Cargo.toml
lib-serml/dex/dex/: Cargo.toml
lib-serml/dex/incentives/: Cargo.toml
lib-serml/dex/src/: lib.rs  mock.rs  tests.rs  weights.rs
lib-serml/donations/: Cargo.toml  types.json
lib-serml/donations/src/: lib.rs
lib-serml/emergency-shutdown/: Cargo.toml
lib-serml/emergency-shutdown/src/: lib.rs  mock.rs  tests.rs  weights.rs
lib-serml/evm-accounts/: Cargo.toml
lib-serml/evm-accounts/src/: lib.rs  mock.rs  tests.rs  weights.rs
lib-serml/evm-bridge/: Cargo.toml
lib-serml/evm-bridge/src/: lib.rs  mock.rs  tests.rs
lib-serml/evm-manager/: Cargo.toml
lib-serml/evm-manager/src/: lib.rs  mock.rs  tests.rs
lib-serml/example/: Cargo.toml
lib-serml/example/src/: lib.rs  mock.rs  tests.rs
node/: Cargo.toml  build.rs
node/cli/: Cargo.toml  build.rs
node/cli/src/: cli.rs  command.rs  lib.rs
node/service/: Cargo.toml
node/service/src/: client.rs  lib.rs  mock_timestamp_data_provider.rs  mock_timestamp_inherent_data_provider.rs
node/setheum/: Cargo.toml
node/setheum-dev/: Cargo.toml
node/setheum-dev/cli/: Cargo.toml  build.rs
node/setheum-dev/service/: Cargo.toml
node/setheum-dev/src/: main.rs
node/setheum/cli/: Cargo.toml
node/setheum/service/: Cargo.toml
node/setheum/src/: main.rs
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: slixon.rs
primitives/: Cargo.toml
primitives/proc-macro/: Cargo.toml
primitives/proc-macro/src/: lib.rs
primitives/src/: constants.rs  currency.rs  edfis_launchpad.rs  evm.rs  lib.rs  mocks.rs  nft.rs  signature.rs  task.rs  testing.rs  tests.rs  traits.rs  unchecked_extrinsic.rs  vesting.rs
primitives/src/bonding/: controller.rs  error.rs  ledger.rs  mod.rs
rpc/: Cargo.toml  nginx.conf  rpc.py
rpc/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs
runtime/neom/: Cargo.toml  build.rs
runtime/neom/src/: authority.rs  constants.rs  lib.rs
runtime/newrome/: Cargo.toml  build.rs
runtime/newrome/src/: authority.rs  constants.rs  lib.rs
runtime/newrome/tests/: integration_test.rs  weights_test.rs
runtime/setheum/: Cargo.toml  build.rs
runtime/setheum/src/: authority.rs  constants.rs  lib.rs
runtime/setheum/tests/: integration_test.rs  weights_test.rs
runtime/slixon/: Cargo.toml  build.rs
runtime/slixon/src/: constants.rs  lib.rs
runtime/src/: authority.rs  constants.rs  lib.rs
runtime/src/benchmarking/: auction.rs  auction_manager.rs  authority.rs  cdp_engine.rs  cdp_treasury.rs  currencies.rs  dex.rs  dex_oracle.rs  emergency_shutdown.rs  evm.rs  evm_accounts.rs  mod.rs  oracle.rs  prices.rs  serp_setmint.rs  serp_treasury.rs  tokens.rs  transaction_pause.rs  transaction_payment.rs  utils.rs  vesting.rs
runtime/src/weights/: dex_oracle.rs  emergency_shutdown.rs  mod.rs  module_auction_manager.rs  module_cdp_engine.rs  module_cdp_treasury.rs  module_currencies.rs  module_dex.rs  module_dex_oracle.rs  module_emergency_shutdown.rs  module_evm.rs  module_evm_accounts.rs  module_nft.rs  module_prices.rs  module_transaction_pause.rs  module_transaction_payment.rs  module_vesting.rs  orml_auction.rs  orml_authority.rs  orml_oracle.rs  orml_tokens.rs  serp_setmint.rs  serp_treasury.rs
runtime/tests/: integration_test.rs  weights_test.rs
runtime/tests/solidity_test/: TokenMock.json
storage-adapters/: Cargo.toml
storage-adapters/src/: bounded_deque.rs
(+2083 files in other folders)
