[profile.release]
panic = 'unwind'

[profile.dev]
split-debuginfo = "unpacked"

[workspace]
members = [
    'node',
    'lib-serml/*',
    'runtime',
	"runtime/common",
    'primitives',

	"lib-orml/auction",
	"lib-orml/authority",
	"lib-orml/benchmarking",
	"lib-orml/currencies",
	"lib-orml/nft",
	"lib-orml/oracle",
	"lib-orml/oracle/rpc",
 	"lib-orml/oracle/rpc/runtime-api",
	"lib-orml/tokens",
	"lib-orml/traits",
	"lib-orml/utilities",
]
exclude = ['rpc']
