cargo-features = ["resolver"]

[workspace]
resolver = "2"

members = [
	# Primary modules
    'node',
    'runtime',
	"runtime/common",
    'primitives',
	# SERML Modules
	"lib-serml/core/airdrop",
	# "lib-serml/core/atomic-swap",
	"lib-serml/core/idle-scheduler",
	"lib-serml/core/oracle/dex-oracle",
	"lib-serml/core/oracle/prices",
	"lib-serml/core/tokens/currencies",
	"lib-serml/core/tokens/nft",
	"lib-serml/core/transactions/transaction-pause",
	"lib-serml/core/transactions/transaction-payment",
	"lib-serml/core/vesting",
	# "lib-serml/defi/al-ethaar",
	# "lib-serml/defi/al-ethaar/rpc",
	# "lib-serml/defi/al-ethaar/runtime-api",
	# "lib-serml/defi/highend/launchpad",
	# "lib-serml/defi/highend/launchpad/rpc",
	# "lib-serml/defi/highend/launchpad/rpc/runtime-api",
	# "lib-serml/defi/qma/flashloans",
	# "lib-serml/defi/qma/fvm",
	"lib-serml/defi/serp",
	"lib-serml/defi/setmint/auction-manager",
	"lib-serml/defi/setmint/cdp-engine",
	"lib-serml/defi/setmint/cdp-treasury",
	"lib-serml/defi/setmint/emergency-shutdown",
	"lib-serml/defi/setmint/loans",
	"lib-serml/defi/setmint/setmint-core",
	"lib-serml/defi/setswap/dex",
	"lib-serml/defi/setswap/p2p",
	"lib-serml/sevm/evm",
	"lib-serml/sevm/evm/rpc",
	"lib-serml/sevm/evm/rpc/runtime_api",
	"lib-serml/sevm/evm-accounts",
	"lib-serml/sevm/evm-bridge",
	"lib-serml/sevm/evm-manager",
	# ORML modules
	"lib-orml/auction",
	"lib-orml/authority",
	"lib-orml/benchmarking",
	"lib-orml/currencies",
	"lib-orml/nft",
	"lib-orml/oracle",
	"lib-orml/oracle/rpc",
 	"lib-orml/oracle/rpc/runtime-api",
	"lib-orml/tokens",
	"lib-orml/traits",
	"lib-orml/utilities",
]
exclude = ['rpc']

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Substrate runtime requires unwinding.
panic = 'unwind'

[profile.dev]
split-debuginfo = "unpacked"
