cargo-features = ["resolver"]

[workspace]
members = [
	"blockchain/node",
	"blockchain/node/cli",
	"blockchain/node/service",

	"blockchain/modules/*",
	"blockchain/modules/currencies/runtime-api",
	"blockchain/modules/evm-utility/macro",
	"blockchain/primitives",
	"blockchain/rpc",

	"blockchainruntime/common",
	"blockchainruntime/qingdao",
	"blockchainruntime/setheum",

	"orml/asset-registry",
	"orml/auction",
	"orml/authority",
	"orml/benchmarking",
	"orml/currencies",
	"orml/gradually-update",
	"orml/nft",
	"orml/oracle",
 	"orml/oracle/runtime-api",
	"orml/parameters",
	"orml/payments",
	"orml/rewards",
	"orml/tokens",
	"orml/tokens/runtime-api",
	"orml/traits",
	"orml/unknown-tokens",
	"orml/utilities",
	"orml/vesting",
	"orml/xcm-support",
	"orml/xcm",
	"orml/xtokens",
]

resolver = "2"

[profile.release]
# Substrate runtime requires unwinding.
panic = 'unwind'

[profile.dev]
split-debuginfo = "unpacked"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace.package]
authors = [ "Open Web3 Foundation", "Setheum Labs", "Slixon Technologies"]
edition = "2021"
homepage = "https://setheum.xyz"
repository = "https://github.com/Setheum-Labs/Setheum"
version = "0.9.81-dev"

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-zebra = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
insta.opt-level = 3
similar.opt-level = 3

[workspace.dependencies]
aleph-bft-crypto = { version = "0.8" }
aleph-bft-mock = { version = "0.11.1" }
aleph-bft-rmc = { version = "0.11" }
aleph-bft-types = { version = "0.11" }
async-trait = { version = "0.1.71" }
bn = { package = "substrate-bn", version = "0.6", default-features = false }
bytes = { version = "1.5" }
bstringify = { version = "0.1.2" }
clap = { version = "4.0.9" }
coins-bip32 = { version = "0.7.0" }
coins-bip39 = { version = "0.7.0" }
derive_more = { version = "0.99" }
enumflags2 = { version = "0.7.7" }
env_logger = { version = "0.10.0" }
ethabi = { version = "18.0.0", default-features = false }
ethereum-types = { version = "0.14.0", default-features = false }
futures = { version =  "0.3.28" }
futures-timer = { version = "3.0" }
hash-db = { version = "0.16", default-features = false }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.4.1" }
impl-trait-for-tuples = { version = "0.2.2" }
ink = { version = "5.0.0-rc" }
ip_network = { version = "0.4" }
jsonrpsee = { version = "0.16.3" }
k256 = { version = "0.11.5", default-features = false }
libp2p = { version = "0.51" }
libsecp256k1 = { version = "0.7", default-features = false }
log = { version = "0.4.20", default-features = false }
lru = { version = "0.10" }
num = { version = "0.4", default-features = false }
num_enum = { version = "0.5.1", default-features = false }
parity-scale-codec = { version = "3.6.5", default-features = false }
parking_lot = { version = "0.12" }
paste = { version = "1.0" }
proc-macro2 = { version = "1.0.40" }
quote = { version = "1.0.20" }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.2", default-features = false }
rand_pcg = { version = "0.3.1", default-features = false }
rlp = { version = "0.5.2", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.145", default-features = false }
serde_json = { version = "1.0.81", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
smallvec = { version = "1.4.1" }
static_assertions = { version = "1.1.0" }
thiserror = { version = "1.0" }
tiny-bip39 = { version = "1.0" }syn = { version = "1.0.98" }
tiny-keccak = { version = "2.0" }
tokio = { version = "1.36" }

# Dependencies are split into 2 groups: WASM and Client.
# - "WASM" dependencies requires to be no_std compatible, which often requires
#   `default-features = false`. When used in a client-side crate the "std" feature should be enabled
#   there if it exists.
# - "Client" dependencies are only used in the client, and thus don't need to be no_std compatible.

# ORML (WASM)
orml-auction = { path = "orml/auction", default-features = false }
orml-authority = { path = "orml/authority", default-features = false }
orml-benchmarking = { path = "orml/benchmarking", default-features = false }
orml-build-script-utils = { path = "orml/build-script-utils" }
orml-currencies = { path = "orml/currencies", default-features = false }
orml-nft = { path = "orml/nft", default-features = false }
orml-oracle = { path = "orml/oracle", default-features = false }
orml-oracle-runtime-api = { path = "orml/oracle/runtime-api", default-features = false }
orml-parameters = { path = "orml/parameters", default-features = false }
orml-payments = { path = "orml/payments", default-features = false }
orml-rewards = { path = "orml/rewards", default-features = false }
orml-tokens = { path = "orml/tokens", default-features = false }
orml-tokens-runtime-api = { path = "orml/tokens/runtime-api", default-features = false }
orml-traits = { path = "orml/traits", default-features = false }
orml-unknown-tokens = { path = "orml/unknown-tokens", default-features = false }
orml-utilities = { path = "orml/utilities", default-features = false }
orml-vesting = { path = "orml/vesting", default-features = false }
orml-xcm = { path = "orml/xcm", default-features = false }
orml-xcm-support = { path = "orml/xcm-support", default-features = false }
orml-xtokens = { path = "orml/xtokens", default-features = false }

wasm-bencher = { git = "https://github.com/open-web3-stack/wasm-bencher", branch = "polkadot-v1.3.0", default-features = false }

# Setheum (WASM)
primitives = { package = "setheum-primitives", path = "primitives", default-features = false }
runtime-common = { path = "blockchain/runtime/common", default-features = false }
qingdao-runtime = { path = "blockchain/runtime/qingdao", default-features = false }
setheum-runtime = { path = "blockchain/runtime/setheum", default-features = false }

# Setheum & ORML (client)
setheum-cli = { path = "blockchain/node/cli" }
setheum-rpc = { path = "blockchain/rpc" }
setheum-service = { path = "blockchain/node/service", default-features = false }
module-evm-utility-macro = { path = "blockchain/modules/evm-utility/macro" }

# Substrate Pallets (WASM)
frame-benchmarking = { version = "25.0.0", default-features = false }
frame-executive = { version = "25.0.0", default-features = false }
frame-support = { version = "25.0.0", default-features = false }
frame-system = { version = "25.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "23.0.0", default-features = false }
frame-try-runtime = { version = "0.31.0", default-features = false }
pallet-aura = { version = "24.0.0", default-features = false }
pallet-authority-discovery = { version = "25.0.0", default-features = false }
pallet-authorship = { version = "25.0.0", default-features = false }
pallet-balances = { version = "25.0.0", default-features = false }
pallet-bounties = { version = "24.0.0", default-features = false }
pallet-contracts = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.3.0", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.3.0", default-features = false }
pallet-collective = { version = "25.0.0", default-features = false }
pallet-democracy = { version = "25.0.0", default-features = false }
pallet-identity = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.3.0", default-features = false }
pallet-indices = { version = "25.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.3.0", default-features = false }
pallet-nomination-pools = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.3.0", default-features = false }
pallet-nomination-pools-runtime-api = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.3.0", default-features = false }
pallet-membership = { version = "25.0.0", default-features = false }
pallet-multisig = { version = "25.0.0", default-features = false }
pallet-preimage = { version = "25.0.0", default-features = false }
pallet-proxy = { version = "25.0.0", default-features = false }
pallet-recovery = { version = "25.0.0", default-features = false }
pallet-root-testing = { version = "1.0.0", default-features = false }
pallet-scheduler = { version = "26.0.0", default-features = false }
pallet-session = { version = "25.0.0", default-features = false }
pallet-staking = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.3.0", default-features = false }
pallet-staking-runtime-api = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.3.0", default-features = false }
pallet-sudo = { version = "25.0.0", default-features = false }
pallet-timestamp = { version = "24.0.0", default-features = false }
pallet-transaction-payment = { version = "25.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "27.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "25.0.0", default-features = false }
pallet-treasury = { version = "24.0.0", default-features = false }
pallet-utility = { version = "25.0.0", default-features = false }
pallet-xcm = { version = "4.0.0", default-features = false }

sp-api = { version = "23.0.0", default-features = false }
sp-application-crypto = { version = "27.0.0", default-features = false }
sp-arithmetic = { version = "20.0.0", default-features = false }
sp-block-builder = { version = "23.0.0", default-features = false }
sp-blockchain = { version = "25.0.0", default-features = false }
sp-consensus = { version = "0.29.0", default-features = false }
sp-consensus-aura = { version = "0.29.0", default-features = false }
sp-consensus-slots = { version = "0.29.0", default-features = false }
sp-core = { version = "25.0.0", default-features = false }
sp-debug-derive = { version = "12.0.0", default-features = false }
sp-externalities = { version = "0.23.0", default-features = false }
sp-inherents = { version = "23.0.0", default-features = false }
sp-io = { version = "27.0.0", default-features = false }
sp-keyring = { version = "28.0.0", default-features = false }
sp-keystore = { version = "0.31.0", default-features = false }
sp-offchain = { version = "23.0.0", default-features = false }
sp-runtime = { version = "28.0.0", default-features = false }
sp-runtime-interface = { version = "21.0.0", default-features = false }
sp-session = { version = "24.0.0", default-features = false }
sp-staking = { version = "23.0.0", default-features = false }
sp-state-machine = { version = "0.32.0", default-features = false }
sp-std = { version = "12.0.0", default-features = false }
sp-storage = { version = "17.0.0", default-features = false }
sp-timestamp = { version = "23.0.0", default-features = false }
sp-tracing = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "23.0.0", default-features = false }
sp-trie = { version = "26.0.0", default-features = false }
sp-version = { version = "26.0.0", default-features = false }
sp-wasm-interface = { version = "18.0.0", default-features = false }
sp-weights = { version = "24.0.0", default-features = false }
xcm = { package = "staging-xcm", version = "4.0.0", default-features = false }
xcm-builder = { package = "staging-xcm-builder", version = "4.0.0", default-features = false }
xcm-executor = { package = "staging-xcm-executor", version = "4.0.0", default-features = false }

frame-benchmarking-cli = { version = "29.0.0" }
sc-basic-authorship = { version = "0.31.0" }
sc-chain-spec = { version = "24.0.0" }
sc-cli = { version = "0.33.0" }
sc-client-api = { version = "25.0.0" }
sc-consensus = { version = "0.30.0" }
sc-consensus-aura = { version = "0.31.0" }
sc-consensus-slots = { version = "0.30.0" }
sc-executor = { version = "0.29.0" }
sc-keystore = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.3.0" }
sc-network = { version = "0.31.0" }
sc-network-common = { version = "0.30.0" }
sc-network-sync = { version = "0.30.0" }
sc-offchain = { version = "26.0.0" }
sc-rpc = { version = "26.0.0" }
sc-rpc-api = { version = "0.30.0" }
sc-rpc-server = { version = "10.0.0" }
sc-service = { version = "0.32.0" }
sc-telemetry = { version = "12.0.0" }
sc-tracing = { version = "25.0.0" }
sc-transaction-pool = { version = "25.0.0" }
sc-transaction-pool-api = { version = "25.0.0" }
sc-utils = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.3.0" }

substrate-build-script-utils = { version = "9.0.0" }
substrate-frame-rpc-system = { version = "25.0.0" }
substrate-prometheus-endpoint = { version = "0.16.0" }
substrate-wasm-builder = { version = "14.0.0" }

try-runtime-cli = { version = "0.35.0" }

xcm-simulator = { version = "4.0.0" }

halo2_proofs = { git = "https://github.com/Cardinal-Cryptography/pse-halo2", branch = "aleph", default-features = false }
