[package]
name = "setheum-inspect"
version = "0.9.0"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
# external dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
derive_more = "0.99"
log = "0.4.8"
structopt = "0.3.8"

# Substrate dependencies
sc-cli = { version = "0.9.0", git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08" }
sc-client-api = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08" }
sc-service = { version = "0.9.0", git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08" }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08" }
