[package]
name = "setheum-inspect"
version = "0.9.0"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
# external dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
derive_more = "0.99"
log = "0.4.8"
structopt = "0.3.8"

# Substrate dependencies
sc-cli = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08", version = '0.10.0-dev' }
sc-client-api = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08", version = '4.0.0-dev' }
sc-service = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08", version = '0.10.0-dev' }
sp-blockchain = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08", version = '4.0.0-dev' }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08", version = '4.0.0-dev', default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-08", version = '4.0.0-dev' }
