[package]
authors = ['Setheum Labs']
build = 'build.rs'
description = 'Setheum Substrate Node'
edition = '2018'
homepage = 'https://setheum.xyz'
license = 'Unlicense'
name = 'setheum-node'
version = '3.0.1'

[[bin]]
name = 'setheum-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }

[dependencies]
hex-literal = "0.3.1"
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
frame-benchmarking-cli = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
pallet-transaction-payment-rpc = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-chain-spec = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-basic-authorship = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-cli = { features = ['wasmtime'], git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-client-api = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-executor = { features = ['wasmtime'], git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-rpc = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-rpc-api = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-service = { features = ['wasmtime'], git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-transaction-pool = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-telemetry = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sp-std = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sp-api = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sp-block-builder = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sp-blockchain = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sp-core = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sp-inherents = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sp-runtime = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sp-transaction-pool = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
substrate-frame-rpc-system = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }

sc-keystore = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sp-keystore = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }

sp-finality-grandpa = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-finality-grandpa = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-finality-grandpa-rpc = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }

sp-consensus = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sp-consensus-babe = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-consensus = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-consensus-babe = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-consensus-babe-rpc = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-consensus-manual-seal = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-consensus-epochs = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sc-consensus-slots = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }


module-evm = { path = "../lib-serml/evm" }
module-evm-rpc-runtime-api = {path = "../lib-serml/evm/rpc/runtime_api" }
evm-rpc = { path = "../lib-serml/evm/rpc" }

setheum-primitives = { path = "../primitives" }

# runtime
setheum-runtime = { path = '../runtime' }

[features]
default = []
runtime-benchmarks = ['setheum-runtime/runtime-benchmarks']
with-ethereum-compatibility = [
	"setheum-runtime/with-ethereum-compatibility"
]
