[package]
authors = ['Setheum Labs']
build = 'build.rs'
description = 'Setheum Substrate Node'
edition = '2018'
homepage = 'https://setheum.xyz'
license = 'Unlicense'
name = 'setheum-node'
version = '3.0.1'

[[bin]]
name = 'setheum-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { version = '3.0.0' }

[dependencies]
hex-literal = "0.3.1"
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

# Substrate dependencies
frame-benchmarking = { version = '3.0.0' }
frame-benchmarking-cli = { version = '3.0.0' }
pallet-transaction-payment-rpc = { version = '3.0.0' }
sc-chain-spec = { version = '3.0.0' }
sc-basic-authorship = { version = "0.9.0" }
sc-cli = { features = ['wasmtime'], version = '0.9.0', optional = true }
sc-client-api = { version = '3.0.0' }
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-rpc = { version = '3.0.0' }
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-transaction-pool = { version = '3.0.0' }
sc-telemetry = { version = '3.0.0' }
sp-std = { version = '3.0.0' }
sp-api = { version = '3.0.0' }
sp-block-builder = { version = '3.0.0' }
sp-blockchain = { version = '3.0.0' }
sp-core = { version = '3.0.0' }
sp-inherents = { version = '3.0.0' }
sp-runtime = { version = '3.0.0' }
sp-transaction-pool = { version = '3.0.0' }
substrate-frame-rpc-system = { version = '3.0.0' }

sc-keystore = { version = '3.0.0' }
sp-keystore = { version = "0.9.0" }

sp-finality-grandpa = { version = '3.0.0' }
sc-finality-grandpa = { version = '0.9.0' }
sc-finality-grandpa-rpc = { version = '0.9.0' }

sp-consensus = { version = '0.9.0' }
sp-consensus-babe = { version = '0.9.0' }
sc-consensus = { version = '0.9.0' }
sc-consensus-babe = { version = '0.9.0' }
sc-consensus-babe-rpc = { version = '0.9.0' }
sc-consensus-manual-seal = { version = '0.9.0' }
sc-consensus-epochs = { version = '0.9.0' }
sc-consensus-slots = { version = '0.9.0' }


module-evm = { path = "../lib-serml/evm" }
module-evm-rpc-runtime-api = {path = "../lib-serml/evm/rpc/runtime_api" }
evm-rpc = { path = "../lib-serml/evm/rpc" }
setheum-renvm-bridge = { path = "../lib-serml/renvm-bridge" }

setheum-primitives = { path = "../primitives" }

# runtime
setheum-runtime = { path = '../runtime/setheum' }

[features]
default = [ "std" ]
std = []
runtime-benchmarks = ['setheum-runtime/runtime-benchmarks']
with-ethereum-compatibility = [
	"setheum-runtime/with-ethereum-compatibility"
]
