[package]
name = "setheum-primitives"
version = "0.9.70"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
bstringify = "0.1.2"
serde = { version = "1.0.124", optional = true }
num-traits = { version = "0.2.14", default-features = false }
impl-trait-for-tuples = "0.2.1"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["bit-vec", "derive"] }
frame-support = { version = '3.0.0', default-features = false }
sp-core = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
evm = { version = "0.24.0", default-features = false, features = ["with-codec"] }

[dev-dependencies]
primitives-proc-macro = { path = "./proc-macro" }
serde_json = { version = "1.0.64" }
frame-support = { version = '3.0.0' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"evm/std",
	"evm/with-serde",
]
test = []
