[package]
name = "setheum-primitives"
version = "0.9.80"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
bstringify = "0.1.2"
serde = { version = "1.0.124", optional = true }
num-traits = { version = "0.2.14", default-features = false }
impl-trait-for-tuples = "0.2.1"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["max-encoded-len"] }
num_enum = { version = "0.5.1", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }

evm = { version = "0.30.0", default-features = false, features = ["with-codec"] }
ethereum = { version = "0.9.0", default-features = false, features = ["with-codec"] }

[dev-dependencies]
primitives-proc-macro = { path = "./proc-macro" }
hex-literal = "0.3.1"
serde_json = { version = "1.0.64" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"num_enum/std",

	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",

	"frame-support/std",

	"evm/std",
	"evm/with-serde",
	"ethereum/std",
	"ethereum/with-serde",
]
runtime-benchmarks = [
]
